--- a/Style/style.css
+++ b/Style/style.css
@@ -2,3 +2,16 @@
     margin: 0;
     padding: 0;
 }
+
+.navbar{
+    margin-bottom: 0px;
+}
+
+.main_container{
+    margin-top: 60px;
+}
+
+.searchBTN{
+    display: flex;
+    
+}
