--- a/Style/style.css
+++ b/Style/style.css
@@ -3,22 +3,32 @@
     padding: 0;
 }
 
+body{
+    background-color: black;
+}
 
 .main_container{
     margin-top: 60px;
+    margin-bottom: 300px;
+    padding-bottom: 200px;
+    position: fixed;
 }
 
 .searchForm{
     width: 80%;
-    display: flex;
+    height: 60px;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
 }
 
-#searchBTN{
-    display: flex;
-    justify-content: center;
+.searchBTN{
+    display: inline-flex;
     align-items: center;
+    justify-content: center;
+    height: 60px;
+    width: 10%;
+    border-radius: 5px;
 }
 
 #gif_container{
@@ -30,4 +40,4 @@
 #gif_container > img{
     min-width: 320px;
     margin: 5px;
-}
+}  
