--- a/Style/style.css
+++ b/Style/style.css
@@ -6,6 +6,7 @@
 body{
     background-color: black;
     font-family: 'Play', sans-serif;
+
 }
 
 .main_container{
@@ -14,7 +15,7 @@ body{
 }
 
 .searchForm{
-    width: 80%;
+
     height: 60px;
     display: inline-flex;
     justify-content: center;
@@ -22,7 +23,8 @@ body{
 }
 
 .searchBTN{
-    display: inline-flex;
+    margin-left: 5px;
+    display: flex;
     align-items: center;
     justify-content: center;
     height: 60px;
@@ -51,10 +53,17 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
   }
 
-  h1{
-    font-size: 64px;
+  .main-banner-title {
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: calc(2rem + 2vw);
+    letter-spacing: 4px;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    color: white;
   }
