--- a/Style/style.css
+++ b/Style/style.css
@@ -6,16 +6,15 @@
 body{
     background-color: black;
     font-family: 'Play', sans-serif;
-
 }
 
+
 .main_container{
-    margin-top: 60px;
-    margin-bottom: 20px;
+    margin-top: 70px;
+    margin-bottom: 10px;
 }
 
 .searchForm{
-
     height: 60px;
     display: inline-flex;
     justify-content: center;
@@ -23,7 +22,7 @@ body{
 }
 
 .searchBTN{
-    margin-left: 5px;
+    margin: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
