--- a/Style/style.css
+++ b/Style/style.css
@@ -27,7 +27,6 @@ body{
     align-items: center;
     justify-content: center;
     height: 60px;
-    width: 10%;
     border-radius: 5px;
 }
 
@@ -44,6 +43,7 @@ body{
 
 .main-banner {
     height: 600px;
+    min-width: 320px;
     background-image: linear-gradient(
         rgba(255, 255, 255, 0.25),
         rgba(255, 255, 255, 0.25)
